--- a/index.html
+++ b/index.html
@@ -102,8 +102,52 @@
         <section id="experience" style="background-image:url(fond-arbre.jpg)">
             <h1>Expérience</h1>
             <div class="content">
-
-
+                <a href="cv.pdf" target="_blank">Voir mon CV (PDF)</a>
+                <p>Expérience professionnel:</p>
+                <ul>
+                    <li>
+                        Poste Occupé :
+                        stagiaire
+                        Apprentit
+                        Intérimaire
+                    </li>
+                    <li>
+                        ENTREPRISE:
+                        Jannelec
+                        CONTY
+                        Forvia Caligny
+                        Forvia Messei
+                    </li>
+                    <li>Date de début :
+                        février 2020
+                        décembre 2021 - janvier2022
+                        avril 2023
+                        aout 2023
+                        Actuellement
+                    </li>
+                    <li>
+                        Date de fin :
+                        Mars 2020
+                        Février 2022
+                        Juin 2023
+                        Septembre 2023
+                        Aout 2025
+                    </li>
+                    <li>
+                        Lieu :
+                        Flers
+                        Flers
+                        Caligny
+                        Messei
+                    </li>
+                    <li>
+                        Contenu de la formation :
+                        Stage de découverte / observation
+                        Stage de pratique 
+                        Intérimaire en usine
+                        Apprentit IT
+                    </li>
+                </ul>
             </div>
             <div class="scroll-down-arrow" data-target="education">
                 <span></span>
