--- a/index.html
+++ b/index.html
@@ -173,16 +173,34 @@
                         Brevet des Collèges
                         Bac Pro Systèmes Numériques
                         BTS SIO
+                        <br>
                     </li>
                     <li>
                         ETABLISSEMENT:
                         Collège Sévigné
                         Lycée Charles Tellier  
                         Caen Sup St Ursule
+                        <br>
                     </li>
-                    <li>Date de début</li>
-                    <li>Date de fin</li>
-                    <li>Lieu</li>
+                    <li>
+                        Date de début :
+                        2017
+                        2021
+                        2023
+                        <br>
+                    </li>
+                    <li>Date de fin :
+                        2020
+                        2021
+                        2025
+                        <br>
+                    </li>
+                    <li>
+                        Lieu :
+                        Flers
+                        Condé-en-normandie
+                        Caen
+                    </li>
                     <li>Contenu de la formation</li>
                 </ul>
             </div>
