--- a/index.html
+++ b/index.html
@@ -201,7 +201,12 @@
                         Condé-en-normandie
                         Caen
                     </li>
-                    <li>Contenu de la formation</li>
+                    <li>
+                        Contenu de la formation :
+                        Passage du Brevet Général
+                        Passage du Bac Pro Systèmes Numériques
+                        En cours de Passage du BTS SIO
+                    </li>
                 </ul>
             </div>
             <div class="scroll-down-arrow" data-target="contact">
