--- a/index.html
+++ b/index.html
@@ -107,50 +107,50 @@
                 <ul>
                     <li>
                         Poste Occupé :
-                        stagiaire
-                        Apprentit
-                        Intérimaire
+                        stagiaire,
+                        Apprentit,
+                        Intérimaire.
                         <br>
                     </li>
                     <li>
                         ENTREPRISE:
-                        Jannelec
-                        CONTY
-                        Forvia Caligny
-                        Forvia Messei
+                        Jannelec,
+                        CONTY,
+                        Forvia Caligny,
+                        Forvia Messei.
                         <br>
                     </li>
                     <li>Date de début :
-                        février 2020
-                        décembre 2021 - janvier2022
-                        avril 2023
-                        aout 2023
-                        Actuellement
+                        février 2020,
+                        décembre 2021,
+                        avril 2023,
+                        aout 2023,
+                        Actuellement.
                         <br>
                     </li>
                     <li>
                         Date de fin :
-                        Mars 2020
-                        Février 2022
-                        Juin 2023
-                        Septembre 2023
-                        Aout 2025
+                        Mars 2020,
+                        Février 2022,
+                        Juin 2023,
+                        Septembre 2023,
+                        Aout 2025.
                         <br>
                     </li>
                     <li>
                         Lieu :
-                        Flers
-                        Flers
-                        Caligny
-                        Messei
+                        Flers,
+                        Flers,
+                        Caligny,
+                        Messei.
                         <br>
                     </li>
                     <li>
                         Contenu de la formation :
-                        Stage de découverte / observation
-                        Stage de pratique
-                        Intérimaire en usine
-                        Apprentit IT
+                        Stage de découverte / observation,
+                        Stage de pratique,
+                        Intérimaire en usine,
+                        Apprentit IT.
                     </li>
                 </ul>
             </div>
@@ -170,42 +170,42 @@
                 <ul>
                     <li>
                         NOMS DES FORMATIONS :
-                        Brevet des Collèges
-                        Bac Pro Systèmes Numériques
-                        BTS SIO
+                        Brevet des Collèges,
+                        Bac Pro Systèmes Numériques,
+                        BTS SIO.
                         <br>
                     </li>
                     <li>
                         ETABLISSEMENT:
-                        Collège Sévigné
-                        Lycée Charles Tellier  
-                        Caen Sup St Ursule
+                        Collège Sévigné,
+                        Lycée Charles Tellier,
+                        Caen Sup St Ursule.
                         <br>
                     </li>
                     <li>
                         Date de début :
-                        2017
-                        2021
-                        2023
+                        2017,
+                        2021,
+                        2023.
                         <br>
                     </li>
                     <li>Date de fin :
-                        2020
-                        2021
-                        2025
+                        2020,
+                        2021,
+                        2025.
                         <br>
                     </li>
                     <li>
                         Lieu :
-                        Flers
-                        Condé-en-normandie
-                        Caen
+                        Flers,
+                        Condé-en-normandie,
+                        Caen.
                     </li>
                     <li>
                         Contenu de la formation :
-                        Passage du Brevet Général
-                        Passage du Bac Pro Systèmes Numériques
-                        En cours de Passage du BTS SIO
+                        Passage du Brevet Général,
+                        Passage du Bac Pro Systèmes Numériques,
+                        En cours de Passage du BTS SIO.
                     </li>
                 </ul>
             </div>
